--- a/Journ-E Website/index.css
+++ b/Journ-E Website/index.css
@@ -23,7 +23,7 @@ body {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform:translate(-50%, -50%);
+	transform:translate(-50%, -70%);
 
 }
 
@@ -34,5 +34,23 @@ body {
 	top: 60%;
 	left: 50%;
 	transform:translate(-50%, -50%);
+
+}
+
+.subHeadingHolder {
+
+	transition: 0.5s;
+
+}
+
+.subHeadingHolder:hover {
+
+	transform: scale(1.2);
+
+}
+
+.subHeading:link {
+
+	text-decoration: none;
 
 }
